# Syntecxhub_Movie_Recommendation_System

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: task_01.ipynb
web_app/: app.py
web_app/static/: script.js  style.css
web_app/templates/: index.html
